--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/mersenne-twister": "^1.1.7",
     "@types/three": "^0.169.0",
     "prettier-plugin-glsl": "^0.2.0",
     "typescript": "^5.5.3",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "lil-gui": "^0.19.2",
+    "mersenne-twister": "^1.1.0",
     "three": "^0.169.0",
     "vite-plugin-glsl": "^1.3.0"
   }
