--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "lil-gui": "^0.19.2",
     "mersenne-twister": "^1.1.0",
+    "simplex-noise": "^4.0.3",
     "three": "^0.169.0",
     "vite-plugin-glsl": "^1.3.0"
   }
